data/derived/fa15/progs/unify/prog0514.ml.out
Characters 91-93:
  in f'), b;;
     ^^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type ('b -> 'b * bool) * 'b
